Properly implementing the controller, paying attention to the child-resources as well